# fastapi_zero

./: .gitignore  pyproject.toml
fastapi_zero/: app.py  database.py  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 68558659b2dc_create_users_table.py  fa156f707cb2_add_col_update_at_to_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
